feat: обновлен алгоритм хранения истории задач и убран лимит на количество.